fix(logo): add high contrast styles to masthead logo

--- a/packages/styles/scss/components/masthead/_masthead.scss
+++ b/packages/styles/scss/components/masthead/_masthead.scss
@@ -56,6 +56,14 @@ $search-transition-timing: 95ms;
     svg {
       width: 58px;
       height: 23px;
+
+      g {
+        fill: $layer-selected-inverse;
+
+        @media screen and (-ms-high-contrast: active) {
+          fill: ButtonText;
+        }
+      }
     }
 
     &::after {
